@@ -56,7 +56,7 @@ PHP_FUNCTION(time_sleep_until);
 #endif
 PHP_FUNCTION(flush);
 #ifdef HAVE_INET_NTOP
-PHP_NAMED_FUNCTION(php_inet_ntop);
+PHP_NAMED_FUNCTION(zif_inet_ntop);
 #endif
 #ifdef HAVE_INET_PTON
 PHP_NAMED_FUNCTION(php_inet_pton);
@@ -125,6 +125,8 @@ PHP_FUNCTION(sys_getloadavg);
 
 PHP_FUNCTION(is_uploaded_file);
 PHP_FUNCTION(move_uploaded_file);
+
+PHP_FUNCTION(net_get_interfaces);
 
 /* From the INI parser */
 PHP_FUNCTION(parse_ini_file);
